# SeatracLogger

./: .gitignore  CMakeLists.txt  build.sh  run.sh  seatrac_logger_config.toml  seatrac_test_config.toml
src/: seatrac_logger.cpp  seatrac_tests.cpp
